# arkon-vietanh

./: .gitignore  README.md  dedup.py  docker-compose.yml  pyproject.toml
alembic/versions/: 013_wiki_user_contributions.py  014_wiki_draft_revision.py  028_project_wiki_pinned_pages.py  028_wiki_search_vector.py  029_source_auto_recover_count.py  030_verbatim_sources.py
app/: config.py  main.py  worker.py
app/ai/: llm_catalog.py  registry.py  vision_catalog.py  wiki_agent.py  wiki_agent_tools.py  wiki_analyzer.py
app/database/: models.py
app/mcp/: tools.py
app/routers/: oauth.py  projects.py  sources.py  wiki.py  wiki_drafts.py  wiki_revisions.py
app/scripts/: cleanup_role_permissions.py  generate_employees_template.py  import_employees.py  reset_employee_role.py  reset_wiki_and_sources.py  seed_school_knowledge_types.py  seed_school_setup.py
app/services/: embedding_storage.py  kb_service.py  notification_service.py  permissions.py  verbatim_service.py  wiki_service.py
docs/: ACCESS-CONTROL.md  ARCHITECTURE.md  MCP.md  SETUP.md  SKILLS.md  WIKI.md  Wiki-Contribution-Design.md
docs/SOP/: 00-index.md  01-tong-quan.md  02-cai-dat.md  03-rbac.md  04-knowledge-types.md  05-source-pipeline.md  06-wiki-retrieval.md  07-mcp-server.md  08-frontend-flows.md  09-quy-trinh-theo-role.md  10-van-hanh-su-co.md
docs/knowledge-base/: README.md  access-control.md  api-reference.md  ingestion.md  mcp-tools.md  overview.md  search.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: README.md  docs-driven-rbac.spec.ts  rbac-auth.spec.ts  school-rbac.spec.ts  workspace-add-source.spec.ts  workspace-crud.spec.ts  workspace-pin-wiki.spec.ts
(+154 files in other folders)
