[project]
name = "arkon"
version = "0.1.0"
description = "Enterprise AI Control Center — Knowledge Base & Skill Management for Claude"
authors = [
    {name = "Arkon Team"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    # AI / LLM (provider-agnostic — user picks at runtime)
    "google-genai>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    # MCP Server
    "fastmcp>=2.0.0",
    # Auth
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    # Content processing
    "content-core>=1.14.1,<2",
    # Image extraction
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    # Storage
    "minio>=7.2.0",
    # Utilities
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "aiosmtplib>=3.0.0",
    # Worker queue
    "arq>=0.26",
    "redis[hiredis]>=5.0",
    # Security
    "cryptography>=44.0",
    "mammoth>=1.12.0",
    # Spreadsheet extraction (xlsx/xls/csv → markdown)
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
